@@ -1,5 +1,9 @@
 2009-10-22  Teika kazura <teika@lavabit.com>
 	* OPTIONS
+	* man/sawfish.texi
+	* lisp/sawfish/wm/viewport.jl: Docstring improvement for 'scroll-viewport-steps'
+
+	* OPTIONS
 	* lisp/sawfish/wm/ext/apps-menu.jl
 	* man/sawfish.texi: Doc improvements on applications menu.
 
